@@ -94,6 +94,7 @@ time_dep = declare_dependency(link_with: time)
 
 system = static_library('system',
   'src/system/SetupProcess.cxx',
+  'libcommon/src/system/ProcessName.cxx',
   'libcommon/src/system/BindMount.cxx',
   include_directories: inc,
   dependencies: [
